--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,46 @@
-<mat-toolbar color="primary" class="app-toolbar">
-  <button mat-icon-button routerLink="/questions" aria-label="Home">
-    <mat-icon>home</mat-icon>
-  </button>
-  <span class="app-title">{{ title }}</span>
+<!-- Top Navigation Bar -->
+<mat-toolbar class="app-navbar">
+  
+  <!-- Right side: Logo + Title -->
+  <div class="navbar-right">
+    <div class="logo-container">
+      <mat-icon class="app-logo">headset_mic</mat-icon>
+    </div>
+    <span class="app-title">{{ title }}</span>
+  </div>
+
   <span class="spacer"></span>
-  <button mat-button routerLink="/questions">
-    <mat-icon>list</mat-icon>
-    Scenarios
-  </button>
+
+  <!-- Left side: View Mode Toggle -->
+  <div class="navbar-left">
+    
+    <div class="view-mode-toggle">
+      <span class="toggle-label">תצוגה:</span>
+      
+      <button 
+        mat-icon-button 
+        [class.active]="!isDetailedMode"
+        (click)="toggleViewMode()"
+        matTooltip="תצוגה פשוטה"
+        class="view-btn">
+        <mat-icon>view_list</mat-icon>
+      </button>
+
+      <button 
+        mat-icon-button 
+        [class.active]="isDetailedMode"
+        (click)="toggleViewMode()"
+        matTooltip="תצוגה מפורטת"
+        class="view-btn">
+        <mat-icon>view_module</mat-icon>
+      </button>
+    </div>
+
+  </div>
+
 </mat-toolbar>
 
+<!-- Main Content -->
 <main class="app-content">
   <router-outlet></router-outlet>
 </main>
